# RAG_system_on_local_machine

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
data/: prompt.json
embeds/: 01_embeds_extract.ipynb
src/: app.py  llm.py  text_finder.py  tg.py
